Fix dark mode and enable auto dark mode

--- a/themes/hugo-coder/assets/scss/_variables.scss
+++ b/themes/hugo-coder/assets/scss/_variables.scss
@@ -1,7 +1,13 @@
 // Fonts
-$text-font-family: "Open Sans", Lato, Georgia, serif;
-$heading-font-family: "Victor Mono", sans-serif;
-$code-font-family: 'Source Code Pro', 'Lucida Console', monospace;
+$text-font-family: "Open Sans",
+Lato,
+Georgia,
+serif;
+$heading-font-family: "Victor Mono",
+sans-serif;
+$code-font-family: 'Source Code Pro',
+'Lucida Console',
+monospace;
 
 // Colors
 $bg-color: #FAFAFA !default;
@@ -17,3 +23,4 @@ $fg-color-dark: #dadada !default;
 $alt-bg-color-dark: #424242 !default;
 $alt-fg-color-dark: #dadada !default;
 $link-color-dark: #8bffc1 !default;
+$alt-text-color-dark: #94C9AC !default;
